syntax = "proto3";

package calculator;

option go_package = "github.com/HyungJunGoo/grpc-go/calculator/proto";

message CalculatorRequest {
    int32 val1 = 1;
    int32 val2 = 2;
}

message PrimeCalculatorRequest {
    int32 num = 1;
}

message CalculatorResponse {
    int32 result = 1;
}

message AvgResponse {
    float result = 1;
}

service CalculatorService {
    rpc Calculate (CalculatorRequest) returns (CalculatorResponse);
    rpc CalculatePrimes (PrimeCalculatorRequest) returns (stream CalculatorResponse);
    rpc CalculateAvg (stream PrimeCalculatorRequest) returns (AvgResponse);
}